post editing, HTML/CSS views